// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiInlineEditText Text Sizes renders in m in editMode 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-m-m"
>
  <div
    class="euiForm"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiFormRow euiFormRow--fullWidth"
          id="generated-id-row"
        >
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--fullWidth"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <input
                  aria-invalid="false"
                  aria-label="Edit text inline"
                  class="euiFieldText euiFieldText--fullWidth"
                  data-test-subj="euiInlineEditModeInput"
                  id="generated-id"
                  type="text"
                  value="Hello World!"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiFlexItem-growZero-euiInlineEditText-m-m"
      >
        <div
          class="euiFormRow euiFormRow--fullWidth"
          id="generated-id-row"
        >
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              aria-busy="false"
              data-test-subj="euiSkeletonLoadingAriaWrapper"
            >
              <div
                class="emotion-euiScreenReaderOnly"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  role="status"
                >
                  Loaded 
                </div>
                <div
                  aria-atomic="true"
                  aria-hidden="true"
                  aria-live="off"
                  role="status"
                />
              </div>
              <button
                aria-label="Save edit"
                class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-success"
                data-test-subj="euiInlineEditModeSaveButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="check"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiFormRow euiFormRow--fullWidth"
          id="generated-id-row"
        >
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              aria-busy="false"
              data-test-subj="euiSkeletonLoadingAriaWrapper"
            >
              <div
                class="emotion-euiScreenReaderOnly"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  role="status"
                >
                  Loaded 
                </div>
                <div
                  aria-atomic="true"
                  aria-hidden="true"
                  aria-live="off"
                  role="status"
                />
              </div>
              <button
                aria-label="Cancel edit"
                class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-danger"
                data-test-subj="euiInlineEditModeCancelButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="cross"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditText Text Sizes renders in m in readMode 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-m-m"
>
  <button
    class="euiButtonEmpty euiButtonEmpty--flushBoth css-wvaqcf-empty-text"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        <div
          class="euiText eui-textTruncate emotion-euiText-m"
        >
          Hello World!
        </div>
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiInlineEditText Text Sizes renders in s in editMode 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-s-s"
>
  <div
    class="euiForm"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiFormRow euiFormRow--fullWidth"
          id="generated-id-row"
        >
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <input
                  aria-invalid="false"
                  aria-label="Edit text inline"
                  class="euiFieldText euiFieldText--fullWidth euiFieldText--compressed"
                  data-test-subj="euiInlineEditModeInput"
                  id="generated-id"
                  type="text"
                  value="Hello World!"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiFlexItem-growZero-euiInlineEditText-s-s"
      >
        <div
          class="euiFormRow euiFormRow--fullWidth"
          id="generated-id-row"
        >
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              aria-busy="false"
              data-test-subj="euiSkeletonLoadingAriaWrapper"
            >
              <div
                class="emotion-euiScreenReaderOnly"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  role="status"
                >
                  Loaded 
                </div>
                <div
                  aria-atomic="true"
                  aria-hidden="true"
                  aria-live="off"
                  role="status"
                />
              </div>
              <button
                aria-label="Save edit"
                class="euiButtonIcon euiButtonIcon--small emotion-euiButtonIcon-base-success"
                data-test-subj="euiInlineEditModeSaveButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="check"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiFormRow euiFormRow--fullWidth"
          id="generated-id-row"
        >
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              aria-busy="false"
              data-test-subj="euiSkeletonLoadingAriaWrapper"
            >
              <div
                class="emotion-euiScreenReaderOnly"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  role="status"
                >
                  Loaded 
                </div>
                <div
                  aria-atomic="true"
                  aria-hidden="true"
                  aria-live="off"
                  role="status"
                />
              </div>
              <button
                aria-label="Cancel edit"
                class="euiButtonIcon euiButtonIcon--small emotion-euiButtonIcon-base-danger"
                data-test-subj="euiInlineEditModeCancelButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="cross"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditText Text Sizes renders in s in readMode 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-s-s"
>
  <button
    class="euiButtonEmpty euiButtonEmpty--small euiButtonEmpty--flushBoth css-wvaqcf-empty-text"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        <div
          class="euiText eui-textTruncate emotion-euiText-s"
        >
          Hello World!
        </div>
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiInlineEditText Text Sizes renders in xs in editMode 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-xs-xs"
>
  <div
    class="euiForm"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiFormRow euiFormRow--fullWidth"
          id="generated-id-row"
        >
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <input
                  aria-invalid="false"
                  aria-label="Edit text inline"
                  class="euiFieldText euiFieldText--fullWidth euiFieldText--compressed"
                  data-test-subj="euiInlineEditModeInput"
                  id="generated-id"
                  type="text"
                  value="Hello World!"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiFlexItem-growZero-euiInlineEditText-xs-xs"
      >
        <div
          class="euiFormRow euiFormRow--fullWidth"
          id="generated-id-row"
        >
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              aria-busy="false"
              data-test-subj="euiSkeletonLoadingAriaWrapper"
            >
              <div
                class="emotion-euiScreenReaderOnly"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  role="status"
                >
                  Loaded 
                </div>
                <div
                  aria-atomic="true"
                  aria-hidden="true"
                  aria-live="off"
                  role="status"
                />
              </div>
              <button
                aria-label="Save edit"
                class="euiButtonIcon euiButtonIcon--small emotion-euiButtonIcon-base-success"
                data-test-subj="euiInlineEditModeSaveButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="check"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiFormRow euiFormRow--fullWidth"
          id="generated-id-row"
        >
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              aria-busy="false"
              data-test-subj="euiSkeletonLoadingAriaWrapper"
            >
              <div
                class="emotion-euiScreenReaderOnly"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  role="status"
                >
                  Loaded 
                </div>
                <div
                  aria-atomic="true"
                  aria-hidden="true"
                  aria-live="off"
                  role="status"
                />
              </div>
              <button
                aria-label="Cancel edit"
                class="euiButtonIcon euiButtonIcon--small emotion-euiButtonIcon-base-danger"
                data-test-subj="euiInlineEditModeCancelButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="cross"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditText Text Sizes renders in xs in readMode 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-xs-xs"
>
  <button
    class="euiButtonEmpty euiButtonEmpty--small euiButtonEmpty--flushBoth css-wvaqcf-empty-text"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        <div
          class="euiText eui-textTruncate emotion-euiText-xs"
        >
          Hello World!
        </div>
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiInlineEditText renders in editMode 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-m-m"
>
  <div
    class="euiForm"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-grow-1"
      >
        <div
          class="euiFormRow euiFormRow--fullWidth"
          id="generated-id-row"
        >
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--fullWidth"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <input
                  aria-invalid="false"
                  aria-label="Edit text inline"
                  class="euiFieldText euiFieldText--fullWidth"
                  data-test-subj="euiInlineEditModeInput"
                  id="generated-id"
                  type="text"
                  value="Hello World!"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiFlexItem-growZero-euiInlineEditText-m-m"
      >
        <div
          class="euiFormRow euiFormRow--fullWidth"
          id="generated-id-row"
        >
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              aria-busy="false"
              data-test-subj="euiSkeletonLoadingAriaWrapper"
            >
              <div
                class="emotion-euiScreenReaderOnly"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  role="status"
                >
                  Loaded 
                </div>
                <div
                  aria-atomic="true"
                  aria-hidden="true"
                  aria-live="off"
                  role="status"
                />
              </div>
              <button
                aria-label="Save edit"
                class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-success"
                data-test-subj="euiInlineEditModeSaveButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="check"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiFormRow euiFormRow--fullWidth"
          id="generated-id-row"
        >
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              aria-busy="false"
              data-test-subj="euiSkeletonLoadingAriaWrapper"
            >
              <div
                class="emotion-euiScreenReaderOnly"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  role="status"
                >
                  Loaded 
                </div>
                <div
                  aria-atomic="true"
                  aria-hidden="true"
                  aria-live="off"
                  role="status"
                />
              </div>
              <button
                aria-label="Cancel edit"
                class="euiButtonIcon euiButtonIcon--medium emotion-euiButtonIcon-base-danger"
                data-test-subj="euiInlineEditModeCancelButton"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="euiButtonIcon__icon"
                  color="inherit"
                  data-euiicon-type="cross"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditText renders in readMode 1`] = `
<div
  class="euiInlineEdit euiInlineEditText testClass1 testClass2 emotion-euiInlineEditText-m-m"
>
  <button
    class="euiButtonEmpty euiButtonEmpty--flushBoth css-wvaqcf-empty-text"
    data-test-subj="euiInlineReadModeButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
    >
      <span
        class="euiButtonContent__icon"
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="euiButtonEmpty__text"
      >
        <div
          class="euiText eui-textTruncate emotion-euiText-m"
        >
          Hello World!
        </div>
      </span>
    </span>
  </button>
</div>
`;
